# PlaylistGenerator

./: .gitignore  README.md  clap_playground.ipynb  clip_to_clap_bridge_train.ipynb  compute_embeddings.ipynb  data_pipeline.py  demo_app.py  finetune_clap.ipynb  fma_utils.py  image_gen.py  main.py  playlist_from_image.ipynb  playlist_from_prompt.ipynb  playlist_utils.py  pyproject.toml  requirements.txt  song_dl.ipynb  utils.py
report/: playlist_report.tex
report/.latex/: playlist_report.aux  playlist_report.out  playlist_report.toc
