[project]
name = "playlistgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "laion-clap>=1.1.7",
    "librosa>=0.11.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
