[project]
name = "playlistgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.7.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "laion-clap>=1.1.7",
    "librosa>=0.11.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "peft>=0.14.0",
    "soundfile>=0.13.1",
    "yt-dlp>=2025.1.15",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "yt-dlp-ejs>=0.7.0",
    "secretstorage>=3.5.0",
    "diffusers>=0.30.0",
    "accelerate>=0.33.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=4.45.0",
    "Pillow>=10.0.0",
    "qwen-vl-utils>=0.0.14",
    "gradio>=5.24.0",
]
